[package]
name = "jubjub"
version = "0.0.1"
authors = ["Sean Bowe <ewillbefull@gmail.com>"]

[dependencies]
rand = "0.3"

[dependencies.pairing]
version = "0.11"
default-features = false

[dependencies.bellman]
version = "0.0.3"
default-features = false

[features]
default = ["u128-support"]
u128-support = ["pairing/u128-support", "bellman/u128-support"]
